# socket-rdt

./: .clang-format  .gitignore  CMakeLists.txt  README.md  router.py
include/: abstract.hpp  endpoints.hpp  packet.hpp  utils.hpp
src/: main.cpp
test/custom/: test.txt
